fix alignment monitor

--- a/css/main.css
+++ b/css/main.css
@@ -13,12 +13,12 @@ body {
 
 
 .article {
- width: 10%;
+ width: 100%;
 }
 
 .center {
   margin: auto;
-  width: 50%;
+  width: 100%;
   
   padding: 10px;
 }
@@ -47,7 +47,7 @@ body {
   width: 150px;
   height: 50px;
   top:382px;
-  left:185px;
+  left:195px;
 }
 .stand:after {
    content:"";
@@ -59,5 +59,5 @@ body {
    width: 300px;
    height: 15px;
    top: 50px;
-   left: 110px;
+   left: 120px;
 }
